Fix(Group): z-index of breakout group to ensure links are clickable when sitting over a sidebar or similar

--- a/bundle.css
+++ b/bundle.css
@@ -1082,6 +1082,8 @@ form input[type=button] {
 
 .group--breakout {
   width: 100cqw;
+  position: relative;
+  z-index: 300;
 }
 .container .group--breakout {
   max-width: var(--width-contained);
