--- a/src/components/Group/group.scss
+++ b/src/components/Group/group.scss
@@ -4,6 +4,8 @@
 
 	&--breakout {
 		width: 100cqw; // use the width of the closest container
+		position: relative;
+		z-index: 300;
 
 		.container & {
 			max-width: var(--width-contained);
